exports[`ChildRecordPanel Snapshots baseline snapshot 1`] = `
<div
  className="spf-child-record">
  <div
    className="panel text--left spf-child-record--include">
    <div
      className="panel__body">
      <div
        className="flex">
        <div
          className="col-xs-11">
          <div
            className="spf-child-record__type--include">
            include
            :
            _spf.erlock.homes
          </div>
          <span>
            mx
          </span>
        </div>
        <div
          className="col-xs-1">
          <i
            className="fa fa-angle-up fa-2x float--right h-hide"
            onClick={[Function]} />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ChildRecordPanel Snapshots should be hidden if collapsed is true 1`] = `
<div
  className="spf-child-record h-hide">
  <div
    className="panel text--left spf-child-record--include">
    <div
      className="panel__body">
      <div
        className="flex">
        <div
          className="col-xs-11">
          <div
            className="spf-child-record__type--include">
            include
            :
            _spf.erlock.homes
          </div>
          <span>
            mx
          </span>
        </div>
        <div
          className="col-xs-1">
          <i
            className="fa fa-angle-up fa-2x float--right h-hide"
            onClick={[Function]} />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ChildRecordPanel Snapshots should change toggle icon if childrenCollapsed is false 1`] = `
<div
  className="spf-child-record">
  <div
    className="panel text--left spf-child-record--include">
    <div
      className="panel__body">
      <div
        className="flex">
        <div
          className="col-xs-11">
          <div
            className="spf-child-record__type--include">
            include
            :
            _spf.erlock.homes
          </div>
          <span>
            mx
          </span>
        </div>
        <div
          className="col-xs-1">
          <i
            className="fa fa-angle-down fa-2x float--right h-hide"
            onClick={[Function]} />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ChildRecordPanel Snapshots should not show record if missing 1`] = `
<div
  className="spf-child-record">
  <div
    className="panel text--left spf-child-record--include">
    <div
      className="panel__body">
      <div
        className="flex">
        <div
          className="col-xs-11">
          <div
            className="spf-child-record__type--include">
            include
            :
            _spf.erlock.homes
          </div>
          <span />
        </div>
        <div
          className="col-xs-1">
          <i
            className="fa fa-angle-up fa-2x float--right h-hide"
            onClick={[Function]} />
        </div>
      </div>
    </div>
  </div>
</div>
`;
